Problem with Java version detected - tests in progress